@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-16T16:08:20Z",
+  "timestamp" : "2022-04-20T00:36:53Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 20,
-  "uniques" : 3,
+  "count" : 29,
+  "uniques" : 4,
   "views" : [
     {
       "timestamp": "2022-04-15T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 0, 16 ],
       "uniques": 2,
       "uniques_minmax": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2022-04-19T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 9, 9 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
