@@ -1,5 +1,5 @@
 {
-  "count": 20,
+  "count": 29,
   "uniques": 2,
   "views": [
     {
@@ -11,6 +11,11 @@
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 16,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-04-19T00:00:00Z",
+      "count": 9,
+      "uniques": 1
     }
   ]
 }
